# arpack-ng-cmake-test

./: .gitignore  README.md  build-and-test-cmake.sh  build-and-test.sh  test.sh
cmake-test/: CMakeLists.txt
makedir-test/: Makefile
